# demo-secretflow-divergent-programs

./: .gitignore  README.md  alice.py  bob.py  pyproject.toml  start-ray.sh
